# meal_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  compass_artifact_wf-5b53f75a-bca2-4a5a-87fc-134943b9e0a7_text_markdown.md  compose.yaml  config.py  ffmpeg_utils.py  gemini_client.py  models.py  notion_logger.py  pyproject.toml  requirements.txt
meal_bot/: __main__.py  config.py  main.py
meal_bot/clients/: gemini.py
meal_bot/integrations/: notion.py
